mc/issues/#141 Pushing nav items to edges of viewport & unsticking sticky footer
I still see superfluous scrollbars on some pages

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -144,28 +144,6 @@ table.table-hover tbody tr:hover {
 body.page_iptt_table { /* body element for extra specificity */
     margin-bottom: 0;
 }
-/* following media queries overload boostrap container behavior in _grid.scss */
-@media (min-width: 1200px) { 
-    .page_iptt_table .container {
-        max-width: 100%;
-    }
-}
-@media (min-width: 992px) {
-    .page_iptt_table .container {
-        max-width: 100%;
-    }
-}
-@media (min-width: 768px) {
-    .page_iptt_table .container {
-        max-width: 100%;
-    }
-}
-@media (min-width: 576px) {
-    .page_iptt_table .container {
-        max-width: 100%;
-    }
-}
-
 .page_iptt_table #id_div_content {
     display: flex;
 }
